# imageGallery

./: .gitignore  README.md  image_gallery.py  pyproject.toml  styles.css
gallery/: ImageGallery.html
